Refactoring dropdown filtering by appliance ustensils and ingredients

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <ul
                       id="ingredients"
                       class="list-group list-group-vertical"
+                      data-id="ingredients"
                     ></ul>
                   </div>
                 </div>
@@ -146,6 +147,7 @@
                     <ul
                       id="appliance"
                       class="list-group list-group-vertical"
+                      data-id="appliance"
                     ></ul>
                   </div>
                 </div>
@@ -185,6 +187,7 @@
                     <ul
                       id="ustensils"
                       class="list-group list-group-vertical"
+                      data-id="ustensils"
                     ></ul>
                   </div>
                 </div>
