--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               <div class="btn-group" role="group">
                 <button
                   id="btnGroupDrop1"
+                  data-btn="ingredients"
                   type="button"
                   class="btn btn-primary dropdown-toggle"
                   data-bs-toggle="dropdown"
@@ -115,6 +116,7 @@
               <div class="btn-group" role="group">
                 <button
                   id="btnGroupDrop2"
+                  data-btn="appliance"
                   type="button"
                   class="btn btn-primary dropdown-toggle"
                   data-bs-toggle="dropdown"
@@ -155,6 +157,7 @@
               <div class="btn-group" role="group">
                 <button
                   id="btnGroupDrop3"
+                  data-btn="ustensils"
                   type="button"
                   class="btn btn-primary dropdown-toggle"
                   data-bs-toggle="dropdown"
