Refactoring input search dropdown

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     >
                     <input
                       id="search-ingredient"
+                      data-input="ingredients"
                       class="form-control"
                       type="search"
                       placeholder=""
@@ -129,6 +130,7 @@
                     >
                     <input
                       id="search-appliance"
+                      data-input="appliance"
                       class="form-control"
                       type="search"
                       placeholder=""
@@ -169,6 +171,7 @@
                     >
                     <input
                       id="search-ustensils"
+                      data-input="ustensils"
                       class="form-control"
                       type="search"
                       placeholder=""
